--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "apexcharts": "^3.36.3",
     "bootstrap": "^5.2.3",
     "bootstrap-scss": "^5.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "feather-icons": "^4.29.0",
     "font-awesome": "^4.7.0",
