--- a/angular.json
+++ b/angular.json
@@ -105,7 +105,9 @@
             "styles": [
               "node_modules/font-awesome/scss/font-awesome.scss", 
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css", 
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css", 
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css", 
               "src/styles.scss"],
             "scripts": [],
             "vendorChunk": true,
