--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ngx-tabset": "^2.2.0",
     "ngx-toastr": "^16.0.1",
     "photoswipe": "^5.3.0",
+    "primeng": "^17.7.0",
     "rxjs": "~7.5.6",
     "sweetalert2": "^11.4.29",
     "typescipt": "^1.0.0",
